# BinPackingProblemProject

./: BinPacking.cpp  BinPacking.h  Bus.cpp  Bus.h  BusManager.cpp  BusManager.h  CMakeLists.txt  Driver.cpp  Driver.h  IViaje.cpp  IViaje.h  Normal.cpp  Normal.h  Passenger.cpp  Passenger.h  PassengerManager.cpp  PassengerManager.h  Person.cpp  Person.h  Vehicle.cpp  Vehicle.h  main.cpp
